--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
   font-family: "Roboto", sans-serif;
 }
 
+h1 {
+  font-size: 60px;
+  font-weight: 700;
+}
+
 nav {
   height: 122px;
 }
@@ -25,8 +30,22 @@ nav {
 }
 
 .boto-contact {
+  font-size: 15px;
   text-decoration: none;
   background-color: #072ac8;
   color: #f2f4fc;
   padding: 15px 36px;
+}
+
+p {
+  font-size: 20px;
+  font-weight: 400;
+  color: #6b708d;
+}
+
+.section1 {
+}
+
+.section1 img {
+  max-width: 600px;
 }
