--- a/style.css
+++ b/style.css
@@ -2,13 +2,18 @@
   font-family: "Roboto", sans-serif;
 }
 
+body {
+  width: 80%;
+  margin: 0 auto;
+}
+
 h1 {
   font-size: 60px;
   font-weight: 700;
 }
 
 nav {
-  height: 122px;
+  margin-top: 40px;
 }
 
 .container-header {
@@ -22,7 +27,7 @@ nav {
   font-size: 17px;
   font-weight: 500;
   color: #6b708d;
-  padding: 0px 5px;
+  padding: 0px 25px;
 }
 
 .menu1 {
@@ -43,13 +48,49 @@ p {
   color: #6b708d;
 }
 
-.section2 {
-  padding: 100px;
+.section1 {
+  margin-top: 50px;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
+}
+
+.cont1-esquerra {
+}
+
+.paragraf-sec1 {
+  margin-right: 112px;
+  margin-bottom: 40px;
 }
 
 .section1 img {
-  max-width: 600px;
+  max-width: 400px;
+}
+
+.container-botonets1 > a {
+  margin-right: 30px;
+}
+
+.section2 {
+  padding: 160px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.section2 img {
+  max-width: 100px;
+}
+
+.grup-sec3 {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.ficha-sec3 {
+  width: 300px;
+}
+
+.ficha-sec3 > img {
+  width: 300px;
 }
